--- a/functions/static/zoomview.ejs
+++ b/functions/static/zoomview.ejs
@@ -14,7 +14,7 @@
 
 <body>
     <div id="tool">
-        <div id="controller" >
+        <div id="controller" style="visibility:hidden;">
             <div>
                 <label>移動：</label>
                 <button type="submit" class="btn btn-primary" id="turn_left" title="turn_left">←</button>
@@ -26,7 +26,6 @@
         </div>
     </div>
     <script>
-
 document.getElementById('turn_left').addEventListener("click", function(e){
     e.preventDefault();
     var params = new Object();
@@ -91,12 +90,12 @@ function postData(value){
 }
 
     </script>
-    <iframe style="width:100%; height:90%; margin-right:auto; margin-left:auto;" srcdoc='
+    <iframe id="zoomframe" style="width:100%; height:90%; margin-right:auto; margin-left:auto;" srcdoc='
       <html>
       <head>
       <meta charset="utf-8" />
-      <link type="text/css" rel="stylesheet" href="https://source.zoom.us/1.7.8/css/bootstrap.css" />
-      <link type="text/css" rel="stylesheet" href="https://source.zoom.us/1.7.8/css/react-select.css" />
+      <link type="text/css" rel="stylesheet" href="https://source.zoom.us/1.9.7/css/bootstrap.css" />
+      <link type="text/css" rel="stylesheet" href="https://source.zoom.us/1.9.7/css/react-select.css" />
       <meta name="format-detection" content="telephone=no">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
@@ -104,14 +103,14 @@ function postData(value){
       </head>
 
       <body>
-      <script src="https://source.zoom.us/1.7.8/lib/vendor/react.min.js"></script>
-      <script src="https://source.zoom.us/1.7.8/lib/vendor/react-dom.min.js"></script>
-      <script src="https://source.zoom.us/1.7.8/lib/vendor/redux.min.js"></script>
-      <script src="https://source.zoom.us/1.7.8/lib/vendor/redux-thunk.min.js"></script>
+      <script src="https://source.zoom.us/1.9.7/lib/vendor/react.min.js"></script>
+      <script src="https://source.zoom.us/1.9.7/lib/vendor/react-dom.min.js"></script>
+      <script src="https://source.zoom.us/1.9.7/lib/vendor/redux.min.js"></script>
+      <script src="https://source.zoom.us/1.9.7/lib/vendor/redux-thunk.min.js"></script>
       <script src="https://source.zoom.us/1.7.8/lib/vendor/jquery.min.js"></script>
-      <script src="https://source.zoom.us/1.7.8/lib/vendor/lodash.min.js"></script>
+      <script src="https://source.zoom.us/1.9.7/lib/vendor/lodash.min.js"></script>
 
-      <script src="https://source.zoom.us/zoom-meeting-1.7.8.min.js"></script>
+      <script src="https://source.zoom.us/zoom-meeting-1.9.7.min.js"></script>
       <script type="text/javascript">
           var hostname = "<%-hostname %>";
           var apikey = "<%-apikey %>";
